--- a/package.json
+++ b/package.json
@@ -9,13 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~53.0.11",
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-navigation/bottom-tabs": "^7.4.2",
+    "@react-navigation/native": "^7.1.11",
+    "@react-navigation/native-stack": "^7.3.16",
+    "expo": "53.0.12",
+    "expo-image-picker": "^16.1.4",
     "expo-status-bar": "~2.2.3",
+    "firebase": "^10.7.0",
     "react": "19.0.0",
-    "react-native": "0.79.3"
+    "react-native": "0.79.4",
+    "react-native-deck-swiper": "^2.0.18",
+    "react-native-gesture-handler": "2.24.0",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "^4.11.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "^18.0.0"
   },
   "private": true
 }
