--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native-stack": "^7.3.16",
     "expo": "54.0.21",
     "expo-image-picker": "~17.0.8",
+    "expo-notifications": "^0.32.15",
     "expo-status-bar": "~3.0.8",
     "firebase": "^10.7.0",
     "lodash": "^4.17.21",
